# ZAPDOS-HACKATHON

./: .gitignore  README.md  package-lock.json  tailwind.config.ts
backend-FASTAPI/: .env  mailer.py  main.py  pyproject.toml
backend-Node/: README.md  app.js  fillStudent.js  package-lock.json  package.json  seedUser.js  server.js  students.json
backend-Node/configs/: db.js
backend-Node/controllers/: applicationController.js  authController.js  companyController.js  departmentController.js  driveController.js  hodApprovalController.js  hodController.js  hodReportController.js  jobRoleController.js  offerLetterController.js  recruitmentController.js  reportController.js  studentController.js  studentProfileController.js  tpoController.js  userController.js
backend-Node/middleware/: authMiddleware.js  uploadOfferLetter.js
backend-Node/models/: Application.js  Company.js  Department.js  Drive.js  HOD.js  JobRole.js  Login.js  RecruitmentRound.js  Student.js  StudentProfile.js  Tpo.js  User.js
backend-Node/routes/: applicationRoutes.js  companyRoutes.js  departmentRoutes.js  driveRoutes.js  hodApprovalRoutes.js  hodRoutes.js  jobRoleRoutes.js  offerLetterRoutes.js  recruitmentRoutes.js  reportRoutes.js  studentProfileRoutes.js  studentRoutes.js  tpoRoutes.js  userRoutes.js
backend-Node/utils/: email.js  uploadResume.js
docs/: blueprint.md
frontend/: package-lock.json  package.json  vite.config.js
frontend-v2/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend-v2/ai/: dev.ts
frontend-v2/app/: layout.tsx  page.tsx
src/ai/: dev.ts
(+99 files in other folders)
